--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,23 @@
 cmake_minimum_required(VERSION 3.14)
 project(CNtity LANGUAGES CXX)
 
-include(FetchContent)
-FetchContent_Declare(
-    stduuid
-    GIT_REPOSITORY https://github.com/mariusbancila/stduuid.git
-    GIT_TAG v1.2.3
-)
-FetchContent_MakeAvailable(stduuid)
-
 add_library(CNtity INTERFACE)
 target_include_directories(CNtity INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_compile_features(CNtity INTERFACE cxx_std_17)
-target_link_libraries(CNtity INTERFACE stduuid)
 
 # ---- examples ----
 option(CNTITY_BUILD_EXAMPLES "Build CNtity example executables" OFF)
+option(CNTITY_BUILD_TESTS "Build the CNtity test suite" OFF)
 
 if(CNTITY_BUILD_EXAMPLES)
+    include(FetchContent)
+    FetchContent_Declare(
+        Catch2
+        GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+        GIT_TAG v3.8.1
+    )
+    FetchContent_MakeAvailable(Catch2)
+
     file(GLOB EXAMPLE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/examples/*/main.cpp")
 
     foreach(EXAMPLE_FILE ${EXAMPLE_FILES})
@@ -28,4 +28,26 @@ if(CNTITY_BUILD_EXAMPLES)
         target_link_libraries(${EXAMPLE_NAME}_example PRIVATE CNtity)
         target_compile_features(${EXAMPLE_NAME}_example PRIVATE cxx_std_17)
     endforeach()
+endif()
+
+if (CNTITY_BUILD_TESTS)
+    include(CTest)
+    enable_testing()
+
+    include(FetchContent)
+    FetchContent_Declare(
+        Catch2
+        GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+        GIT_TAG v3.8.1
+    )
+    FetchContent_MakeAvailable(Catch2)
+
+    file(GLOB TEST_FILES "${CMAKE_CURRENT_SOURCE_DIR}/tests/*.cpp")
+    
+    add_executable(CNtity_tests ${TEST_FILES})
+    target_include_directories(CNtity_tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/tests/include)
+    target_link_libraries(CNtity_tests PRIVATE CNtity Catch2::Catch2WithMain)
+
+    include(Catch)
+    catch_discover_tests(CNtity_tests)
 endif()
