Refactor target name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,12 @@ cmake_minimum_required(VERSION 3.14)
 
 # ---- project ----
 set(CNTITY_VERSION 3.0.0)
-project(CNtity VERSION ${CNTITY_VERSION} LANGUAGES CXX)
+project(cntity VERSION ${CNTITY_VERSION} LANGUAGES CXX)
 
 # ---- library ----
-add_library(CNtity INTERFACE)
-target_include_directories(CNtity INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
-target_compile_features(CNtity INTERFACE cxx_std_17)
+add_library(cntity INTERFACE)
+target_include_directories(cntity INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_compile_features(cntity INTERFACE cxx_std_17)
 
 # ---- examples ----
 option(CNTITY_BUILD_EXAMPLES "Build CNtity example executables" OFF)
@@ -20,7 +20,7 @@ if(CNTITY_BUILD_EXAMPLES)
         get_filename_component(EXAMPLE_NAME ${EXAMPLE_NAME} NAME)
 
         add_executable(${EXAMPLE_NAME}_example ${EXAMPLE_FILE})
-        target_link_libraries(${EXAMPLE_NAME}_example PRIVATE CNtity)
+        target_link_libraries(${EXAMPLE_NAME}_example PRIVATE cntity)
         target_compile_features(${EXAMPLE_NAME}_example PRIVATE cxx_std_17)
     endforeach()
 endif()
@@ -42,16 +42,16 @@ if (CNTITY_BUILD_TESTS)
 
     file(GLOB TEST_FILES "${CMAKE_CURRENT_SOURCE_DIR}/tests/*.cpp")
     
-    add_executable(CNtity_tests ${TEST_FILES})
-    target_include_directories(CNtity_tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/tests/include)
-    target_link_libraries(CNtity_tests PRIVATE CNtity Catch2::Catch2WithMain)
+    add_executable(cntity_tests ${TEST_FILES})
+    target_include_directories(cntity_tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/tests/include)
+    target_link_libraries(cntity_tests PRIVATE cntity Catch2::Catch2WithMain)
 
     if (MSVC)
-        target_compile_options(CNtity_tests PRIVATE /W4 /WX)
+        target_compile_options(cntity_tests PRIVATE /W4 /WX)
     else()
-        target_compile_options(CNtity_tests PRIVATE -Wall -Wextra -Wpedantic -Werror)
+        target_compile_options(cntity_tests PRIVATE -Wall -Wextra -Wpedantic -Werror)
     endif()
 
     include(Catch)
-    catch_discover_tests(CNtity_tests)
+    catch_discover_tests(cntity_tests)
 endif()
